# translator-virtual-mic

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  test_write_audio.sh
apps/macos-host/: Package.swift  TranslatorVirtualMicHost.entitlements  package-app.sh
conductor/: gemini-md-plan.md
config/: default.toml
crates/audio-core/: Cargo.toml
crates/audio-core/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/demo-cli/: Cargo.toml
crates/demo-cli/src/: main.rs
crates/engine-api/: Cargo.toml
crates/engine-api/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/mt-client/: Cargo.toml
crates/mt-client/src/: lib.rs
crates/mt-local/: Cargo.toml
crates/mt-local/src/: lib.rs  madlad.rs  marian.rs  registry.rs
crates/output-bridge/: Cargo.toml
crates/output-bridge/src/: lib.rs
crates/session-core/: Cargo.toml
crates/session-core/src/: azure_voice_live.rs  caption_pipeline.rs  lib.rs  openai_realtime.rs
crates/stt-local/: Cargo.toml
crates/stt-local/src/: audio.rs  fire_red_asr.rs  lib.rs  manager.rs  moonshine.rs  paraformer.rs  registry.rs  tts.rs  vad.rs  zipformer_ctc.rs
crates/tts-cosyvoice/: Cargo.toml
crates/tts-cosyvoice/src/: lib.rs
crates/tts-elevenlabs/: Cargo.toml
crates/tts-elevenlabs/src/: lib.rs
crates/tts-minimax/: Cargo.toml
crates/tts-sidecar/: Cargo.toml
docs/: apple-silicon-model-research.md  architecture.md  azure-live-integration.md  current-status.md  troubleshooting.md
python/tts_backends/: __init__.py  base.py  mlx_backend.py
scripts/: build-dev.sh  build-release.sh  chatterbox_server.py  cosyvoice_server.py  export-marian-tokenizer.py  export-mt-models.py  generate-ffi-header.sh  kokoro_coreml_tokenize.py  madlad_translate.py  run-integration-tests.sh  tts_sidecar_server.py
(+70 files in other folders)
