[workspace]
members = [
  "crates/common",
  "crates/metrics",
  "crates/audio-core",
  "crates/output-bridge",
  "crates/session-core",
  "crates/engine-api",
  "crates/demo-cli",
  "crates/stt-local",
  "crates/mt-client",
  "crates/mt-local",
  "crates/tts-cosyvoice",
  "crates/tts-elevenlabs",
  "crates/tts-minimax",
  "crates/tts-sidecar",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Codex"]
license = "MIT"

[workspace.lints.clippy]
pedantic = "warn"
