[package]
name = "mt-local"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
ort = { version = "2.0.0-rc.12", features = [] }
ndarray = "0.17"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
thiserror = "2"
serde_json = "1"
