[package]
name = "session-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
audio-core = { path = "../audio-core" }
common = { path = "../common" }
metrics = { path = "../metrics" }
output-bridge = { path = "../output-bridge" }
stt-local = { path = "../stt-local" }
mt-client = { path = "../mt-client" }
mt-local = { path = "../mt-local" }
tts-cosyvoice = { path = "../tts-cosyvoice" }
tts-elevenlabs = { path = "../tts-elevenlabs" }
